feat: entity logo
